update openapi / swagger to follow dynamic ip and user defined base path from env of http base url
